  * String#delete_suffix! is added to remove suffix destructively [Feature #13665]
  * String#each_grapheme_cluster and String#grapheme_clusters is added to
    enumerate grapheme clusters [Feature #13780]

* Regexp/String: Updated Unicode version from 9.0.0 to 10.0.0 [Feature #13685]

* Thread

  * Thread#fetch  [Feature #13009]

  * Description set by Thread#name= is now visible on Windows 10.

=== Stdlib updates (outstanding ones only)

* Bundler

  * Add Bundler to Standard Library. [Feature #12733]

* ERB
  * Add ERB#result_with_hash to render a template with local variables passed
    with a Hash object. [Feature #8631]

  * Carriage returns are changed to be trimmed properly if trim_mode is specified
    and used. Duplicated newlines will be removed on Windows. [Bug #5339] [Bug #11464]

* Net::HTTP
  * Add more HTTP status classes

  * Net::HTTP::STATUS_CODES is added as HTTP Status Code Repository [Misc #12935]

  * Net::HTTP#proxy_user and Net::HTTP#proxy_pass now reflects http_proxy
    environment variable if the system's environment variable is multiuser
    safe. [Bug #12921]

* RbConfig
  * New constants:
    * RbConfig::LIMITS is added to provide the limits of C types.

* Ripper
  * New method:
    * Ripper#state is added to tell the state of scanner. [Feature #13686]

  * New constants:
    * Ripper::EXPR_BEG and so on for Ripper#state.

* Set
  * Add Set#to_s as alias to #inspect [Feature #13676]

* WEBrick

  * Add Server Name Indication (SNI) support [Feature #13729]

=== Compatibility issues (excluding feature bug fixes)

* BasicSocket#read_nonblock and BasicSocket#write_nonblock no
  longer sets the O_NONBLOCK file description flag as side effect
  (on Linux only) [Feature #13362]

* Net::HTTP
  * Net::HTTP#start now pass :ENV to p_addr by default. [Bug #13351]
    To avoid this, pass nil explicitly.

* Random.raw_seed renamed to become Random.urandom.  It is now
  applicable to non-seeding purposes due to [Bug #9569].
